<resources>
    <string name="app_name">Greehouse Controller</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--VIEW SPECIFIC-->

    <!--menu-->
    <string name="menu_home">Home</string>
    <string name="menu_status">Status</string>
    <string name="menu_graphs">Graphs</string>
    <string name="menu_pots">Pots</string>
    <string name="menu_settings">Threshold settings</string>
    <string name="menu_edit_greenhouse_id">Change greenhouse Id</string>
    <string name="menu_log_out">Log out</string>

    <!--home-->
    <string name="home_pot">Pot</string>
    <string name="home_pot_current_moisture">Current moisture: </string>
    <string name="home_pot_minimal_moisture">Minimal moisture: </string>
    <string name="home_your_greenhouse">Your greenhouse</string>
    <string name="home_hello_message">"Hello</string>
    <string name="home_pot_limit_reached_toast_message">Limit of 6 pots reached, can\'t add more</string>

    <!--log in, register-->
    <string name="login_login">Login</string>
    <string name="login_email_address">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login_background_image">Background Image</string>
    <string name="login_register">Register</string>
    <string name="login_confirm_password">Confirm Password</string>

    <!--threshold settings-->
    <string name="settings_temperature">Temperature</string>
    <string name="settings_co2">CO2</string>
    <string name="settings_humidity">Humidity</string>
    <string name="settings_upper_threshold">Upper threshold</string>
    <string name="settings_lower_threshold">Lower threshold</string>
    <string name="settings_temperature_celsius">°C</string>
    <string name="settings_co2_ppm">ppm</string>
    <string name="settings_humidity_percentage">%</string>
    <string name="settings_dummy_value_temperature_humidity">00,0</string>
    <string name="settings_out_of_bounds_temperature_exception">Temperature thresholds must be between -20 and 60. </string>
    <string name="settings_out_of_bounds_co2_exception">CO2 thresholds must be between 0 and 5000. </string>
    <string name="settings_out_of_bounds_humidity_exception">Humidity thresholds must be between 0 and 100. </string>
    <string name="settings_lower_higher_than_upper_threshold_exception">Lower threshold cannot be higher than upper. </string>
    <string name="settings_not_a_number_exception">Entered value must be of numerical value. </string>
    <string name="settings_changes_saved">Changes were saved successfully</string>

    <!--add pot-->
    <string name="add_pot_fragment_title">Add pot</string>
    <string name="add_pot_minimal_moisture">Minimal moisture:</string>
    <string name="add_pot_name">Name:</string>
    <string name="add_pot_missing_name_exception">The name is missing</string>
    <string name="add_pot_missing_sensor_exception">Choose a sensor</string>
    <string name="add_pot_sensor">Sensor: </string>

    <!--edit pot-->
    <string name="edit_pot_fragment_title">Edit pot</string>

    <!--add and edit pot-->
    <string name="pot_minimal_moisture">Minimal moisture:</string>
    <string name="pot_name">Name: </string>

    <!--greenhouse id-->
    <string name="greenhouse_id_enter_your_greenhouse_id">Enter your greenhouse ID</string>
    <string name="greenhouse_id_greenhouse_id">Greenhouse ID</string>
    <string name="greenhouse_id_save">Save</string>

    <!-- change greenhouse id-->
    <string name="change_greenhouse_id_nav_label">Change greenhouse Id</string>
    <string name="change_greenhouse_id_title">Greenhouse Id</string>
    <string name="change_greenhouse_id_current_title">Current Id</string>
    <string name="change_greenhouse_id_enter_title">Enter new Id</string>
    <string name="change_greenhouse_id_dummy_value">0004A30B00E7E7C1</string>
    <string name="change_greenhouse_id_notify_same_id">Same greenhouse Id entered</string>

    <!--graphs-->
    <!--bottom navigation-->
    <string name="graphs_bottom_navigation_temperature">Temperature</string>
    <string name="graphs_bottom_navigation_humidity">Humidity</string>
    <string name="graphs_bottom_navigation_co2">CO2</string>
    <string name="graphs_bottom_navigation_moisture">Moisture</string>
    <!--loading-->
    <string name="graphs_loading">Loading...</string>
    <string name="graphs_temperature_graph">Temperature graph</string>
    <string name="graphs_humidity_graph">Humidity graph</string>
    <string name="graphs_moisture_graph">Moisture graph</string>
    <string name="graphs_co2_graph">CO2 graph</string>


    <!--NOT VIEW SPECIFIC-->

    <!--Success messages-->
    <string name="edit_greenhouse_id_success">Successfully updated Id</string>

    <!--Error messages-->
    <string name="connection_error">Connection error</string>
    <string name="unable_to_retrieve_measurements">Unable to retrieve latest measurements</string>
    <string name="unable_to_retrieve_sensor_status">Unable to retrieve sensor status</string>
    <string name="unable_to_retrieve_threshold">Unable to retrieve latest threshold</string>
    <string name="unable_to_access_server">Unable to access server</string>
    <string name="unable_to_retrieve_pot_details">Unable to retrieve pot details</string>
    <string name="unable_to_update_threshold">Unable to update threshold</string>
    <string name="unable_to_add_pot">Unable to add pot</string>
    <string name="unable_to_update_pot">Unable to update pot</string>

    <!--Buttons for the whole app-->
    <string name="cancel_button">Cancel</string>
    <string name="save_button">Save</string>

    <!--Greenhouse Id's-->
    <string name="greenhouse_one_id">0004A30B00E7E7C1</string>
    <string name="greenhouse_two_id">0004A30B00E7E212</string>
</resources>