<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigationHome">

    <fragment
        android:id="@+id/navigationHome"
        android:name="com.example.greehousecontroller.ui.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigationStatus"
        android:name="com.example.greehousecontroller.ui.view.StatusFragment"
        android:label="@string/menu_status"
        tools:layout="@layout/fragment_status" />

    <fragment
        android:id="@+id/navigationGraphs"
        android:name="com.example.greehousecontroller.ui.view.GraphsFragment"
        android:label="@string/menu_graphs"
        tools:layout="@layout/fragment_graphs" />

    <fragment
        android:id="@+id/nav_edit_pot"
        android:name="com.example.greehousecontroller.ui.view.EditPotFragment"
        android:label="@string/edit_pot_fragment_title"
        tools:layout="@layout/fragment_edit_pot" />

    <fragment
        android:id="@+id/navigationThresholdSettings"
        android:name="com.example.greehousecontroller.ui.view.ThresholdSettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_threshold_settings" />
    <fragment
        android:id="@+id/nav_add_pot"
        android:name="com.example.greehousecontroller.ui.view.AddPotFragment"
        android:label="@string/add_pot_fragment_title"
        tools:layout="@layout/fragment_add_pot" />

    <fragment
        android:id="@+id/navigationEditGreenhouseId"
        android:name="com.example.greehousecontroller.ui.view.EditGreenhouseIdFragment"
        android:label="@string/change_greenhouse_id_nav_label"
        tools:layout="@layout/fragment_edit_greenhouse_id" />

</navigation>