<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/mini_margin"
    android:layout_marginBottom="@dimen/mini_margin"
    android:background="@drawable/round_layout_bg"
    android:padding="@dimen/small_margin">

    <ImageView
        android:id="@+id/potItemMoistureImageView"
        android:layout_width="@dimen/home_circle_image_size"
        android:layout_height="@dimen/home_circle_image_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potItemNameTextView"
        app:srcCompat="@drawable/ic_home_moisture"
        tools:src="@drawable/ic_home_moisture"
        android:layout_marginTop="@dimen/small_margin"/>

    <TextView
        android:id="@+id/potItemCurrentMoistureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_pot_current_moisture"
        android:textSize="@dimen/medium_small_text_size"
        android:layout_marginStart="@dimen/small_margin"
        app:layout_constraintStart_toEndOf="@+id/potItemMoistureImageView"
        app:layout_constraintTop_toBottomOf="@+id/potItemNameTextView"
        android:layout_marginTop="@dimen/small_margin"/>

    <TextView
        android:id="@+id/potItemMinimalMoistureTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:text="@string/home_pot_minimal_moisture"
        android:textSize="@dimen/medium_small_text_size"
        android:layout_marginTop="@dimen/mini_margin"
        app:layout_constraintStart_toEndOf="@+id/potItemMoistureImageView"
        app:layout_constraintTop_toBottomOf="@+id/potItemCurrentMoistureTextView"
        android:layout_marginBottom="@dimen/small_margin"/>

    <TextView
        android:id="@+id/potItemCurrentMoistureMeasurementTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_small_text_size"
        app:layout_constraintStart_toEndOf="@+id/potItemCurrentMoistureTextView"
        app:layout_constraintTop_toBottomOf="@+id/potItemNameTextView"
        android:layout_marginStart="@dimen/mini_margin"
        android:layout_marginTop="@dimen/small_margin"/>

    <TextView
        android:id="@+id/potItemMinimalMoistureMeasurementTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/medium_small_text_size"
        android:layout_marginStart="@dimen/mini_margin"
        app:layout_constraintStart_toEndOf="@+id/potItemMinimalMoistureTextView"
        app:layout_constraintTop_toBottomOf="@+id/potItemCurrentMoistureTextView"
        android:layout_marginTop="@dimen/mini_margin"/>

    <TextView
        android:id="@+id/potItemNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home_pot"
        android:textSize="@dimen/heading_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/potItemEdit"
        android:layout_width="@dimen/home_edit_image_size"
        android:layout_height="@dimen/home_edit_image_size"
        android:src="@drawable/ic_home_edit_pot"
        android:onClick="handleEditHumidity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>