<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.ThresholdSettingsFragment"
    android:background="@color/pastel_green"
    android:padding="@dimen/margin_from_screen_edges">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thresholdSettingsTemperatureConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/small_margin"
        android:background="@drawable/round_layout_bg">

        <TextView
            android:id="@+id/thresholdSettingsTemperatureTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_temperature"
            android:textSize="@dimen/heading_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/thresholdSettingsTemperatureUpperThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsTemperatureTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_upper_threshold"
            android:padding="@dimen/small_margin"
            android:paddingEnd="@dimen/mini_margin"/>
        <TextView
            android:id="@+id/thresholdSettingsTemperatureLowerThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsTemperatureUpperThresholdTextView"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/settings_lower_threshold"
            android:padding="@dimen/small_margin"
            android:paddingEnd="@dimen/mini_margin"/>

        <EditText
            android:id="@+id/thresholdSettingsTemperatureUpperThresholdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/settings_dummy_value_temperature_humidity"
            android:maxLength="4"
            android:padding="@dimen/small_margin"
            android:textColorHint="#00FFFFFF"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toStartOf="@+id/thresholdSettingsTemperatureUpperThresholdCelsiusTextView"
            app:layout_constraintStart_toEndOf="@id/thresholdSettingsTemperatureUpperThresholdTextView"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsTemperatureTextView" />

        <EditText
            android:id="@+id/thresholdSettingsTemperatureLowerThresholdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/settings_dummy_value_temperature_humidity"
            android:padding="@dimen/small_margin"
            android:maxLength="4"
            android:textColorHint="#00FFFFFF"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toStartOf="@+id/thresholdSettingsTemperatureLowerThresholdCelsiusTextView"
            app:layout_constraintStart_toEndOf="@id/thresholdSettingsTemperatureLowerThresholdTextView"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsTemperatureUpperThresholdEditText" />

        <TextView
            android:id="@+id/thresholdSettingsTemperatureUpperThresholdCelsiusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/mini_margin"
            android:text="@string/settings_temperature_celsius"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsTemperatureTextView" />

        <TextView
            android:id="@+id/thresholdSettingsTemperatureLowerThresholdCelsiusTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/mini_margin"
            android:text="@string/settings_temperature_celsius"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsTemperatureUpperThresholdCelsiusTextView" />

        <ImageView
            android:id="@+id/thresholdSettingsTemperatureSave"
            android:layout_width="@dimen/home_edit_image_size"
            android:layout_height="@dimen/home_edit_image_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/ic_save"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thresholdSettingsCo2ConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/round_layout_bg"
        android:padding="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thresholdSettingsTemperatureConstraintLayout">

        <TextView
            android:id="@+id/thresholdSettingsCo2TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_co2"
            android:textSize="@dimen/heading_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/thresholdSettingsCo2UpperThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingEnd="@dimen/mini_margin"
            android:text="@string/settings_upper_threshold"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsCo2TextView" />

        <TextView
            android:id="@+id/thresholdSettingsCo2LowerThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingEnd="@dimen/mini_margin"
            android:text="@string/settings_lower_threshold"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsCo2UpperThresholdTextView" />

        <EditText
            android:id="@+id/thresholdSettingsCo2UpperThresholdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/settings_dummy_value_temperature_humidity"
            android:padding="@dimen/small_margin"
            android:maxLength="4"
            android:textColorHint="#00FFFFFF"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toStartOf="@+id/thresholdSettingsCo2UpperThresholdPpmTextView"
            app:layout_constraintStart_toEndOf="@id/thresholdSettingsCo2UpperThresholdTextView"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsCo2TextView" />

        <EditText
            android:id="@+id/thresholdSettingsCo2LowerThresholdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/settings_dummy_value_temperature_humidity"
            android:padding="@dimen/small_margin"
            android:maxLength="4"
            android:textColorHint="#00FFFFFF"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toStartOf="@+id/thresholdSettingsCo2LowerThresholdPpmTextView"
            app:layout_constraintStart_toEndOf="@id/thresholdSettingsCo2LowerThresholdTextView"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsCo2UpperThresholdEditText" />

        <TextView
            android:id="@+id/thresholdSettingsCo2UpperThresholdPpmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/mini_margin"
            android:text="@string/settings_co2_ppm"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsCo2TextView" />

        <TextView
            android:id="@+id/thresholdSettingsCo2LowerThresholdPpmTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/mini_margin"
            android:text="@string/settings_co2_ppm"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsCo2UpperThresholdPpmTextView" />

        <ImageView
            android:id="@+id/thresholdSettingsCo2Save"
            android:layout_width="@dimen/home_edit_image_size"
            android:layout_height="@dimen/home_edit_image_size"
            android:src="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/thresholdSettingsHumidityConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:background="@drawable/round_layout_bg"
        android:padding="@dimen/small_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thresholdSettingsCo2ConstraintLayout">

        <TextView
            android:id="@+id/thresholdSettingsHumidityTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_humidity"
            android:textSize="@dimen/heading_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/thresholdSettingsHumidityUpperThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingEnd="@dimen/mini_margin"
            android:text="@string/settings_upper_threshold"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsHumidityTextView" />

        <TextView
            android:id="@+id/thresholdSettingsHumidityLowerThresholdTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingEnd="@dimen/mini_margin"
            android:text="@string/settings_lower_threshold"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsHumidityUpperThresholdTextView" />

        <EditText
            android:id="@+id/thresholdSettingsHumidityUpperThresholdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/settings_dummy_value_temperature_humidity"
            android:padding="@dimen/small_margin"
            android:maxLength="4"
            android:textColorHint="#00FFFFFF"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toStartOf="@+id/thresholdSettingsHumidityUpperThresholdPercentageTextView"
            app:layout_constraintStart_toEndOf="@id/thresholdSettingsHumidityUpperThresholdTextView"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsHumidityTextView" />

        <EditText
            android:id="@+id/thresholdSettingsHumidityLowerThresholdEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/settings_dummy_value_temperature_humidity"
            android:padding="@dimen/small_margin"
            android:textColorHint="#00FFFFFF"
            android:maxLength="4"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toStartOf="@+id/thresholdSettingsHumidityLowerThresholdPercentageTextView"
            app:layout_constraintStart_toEndOf="@id/thresholdSettingsHumidityLowerThresholdTextView"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsHumidityUpperThresholdEditText" />

        <TextView
            android:id="@+id/thresholdSettingsHumidityUpperThresholdPercentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/mini_margin"
            android:text="@string/settings_humidity_percentage"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsHumidityTextView" />

        <TextView
            android:id="@+id/thresholdSettingsHumidityLowerThresholdPercentageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_margin"
            android:paddingStart="@dimen/mini_margin"
            android:text="@string/settings_humidity_percentage"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/thresholdSettingsHumidityUpperThresholdPercentageTextView" />

        <ImageView
            android:id="@+id/thresholdSettingsHumiditySave"
            android:layout_width="@dimen/home_edit_image_size"
            android:layout_height="@dimen/home_edit_image_size"
            android:src="@drawable/ic_save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>